kubernetes/apps/home-system/home-assistant/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant
  namespace: home-system
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/is-public: "false"
spec:
  hosts:
    - hass.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            regex: "/code/(.*)"
      rewrite:
        uri: "/\\1"
      route:
        - destination:
            host: home-assistant.home-system.svc.cluster.local
            port:
              number: 12321
    - match:
        - uri:
            regex: "/(.*)"
      rewrite:
        uri: "/\\1"
      route:
        - destination:
            host: home-assistant.home-system.svc.cluster.local
            port:
              number: 8123
